Fix navbar bug related to spacing

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -5,10 +5,11 @@
     justify-content: space-evenly;
     align-items: center;
     list-style: none;
-    
+    width: 100vw;
 }
 
 .navElement {
     margin: 0 2rem 0 2rem;
     font-size: 160%;
 }
+
